CICO-23751:Fix for distorted image in room upgrade page.

--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -403,11 +403,9 @@
     .mob-paddding-top-5{
         padding-top:5px !important;
     }
-    .carousel-mobile{
-        height:160px !important;
-    }
-    .carousel .carousel-control{
-        top:63px;
+    .proceed-to-checkin{
+       padding-bottom:4px;
+       padding-top:10px;
     }
 }
 
